--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <div class="position-relative d-flex align-items-center justify-content-center">
-                            <img class="img-fluid rounded-circle mx-auto mb-3" src="img/DUT logo.jpg" style="width: 360px; height: 130px;">
+                            <img class="img-fluid rounded-circle mx-auto mb-3" src="img/DUT logo.jpg" style="width: 360px; height: 120px;">
                             </div>
                             <h5 class="font-weight-bold mb-1">Degree in Engineering: NQF 7</h5>
                             <p class="mb-2"><strong>Durban University of Technology</strong> | <small>2023</small></p>
@@ -150,7 +150,7 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <div class="position-relative d-flex align-items-center justify-content-center">
-                            <img class="img-fluid rounded-circle mx-auto mb-3" src="img/Alison.png" style="width: 250px; height: 130px;">
+                            <img class="img-fluid  mx-auto mb-3" src="img/Alison.png" style="width: 250px; height: 100px;">
                             </div>
                             <h5 class="font-weight-bold mb-1">Diploma in Programming C#: Intermidiate</h5>
                             <p class="mb-2"><strong>Alison</strong> | <small>2024</small></p>
@@ -197,6 +197,12 @@
                             <h5 class="font-weight-bold mb-1">Industrial Engineer Intern</h5>
                             <p class="mb-2"><strong>A & R Engineering and mining supplies (PTY) LTD</strong> | <small>Feb 2024 - Jul 2024</small></p>
                             <p>Working in a mining industry manufacturing and supplying 6 Mines within and abroard the country with the aim of ensuring safety through innovation.</p>
+                            <h6>Key Responsibilites</h6>
+                            <p>• Ensure proper rotation of stock using First-in, First-out (FIFO) to prevent obsolescence. Maintain accurate stock records using manual and computerized Inventory systems (SAP & Excel).</p>
+                            <p>• Organize and store inventory in designated locations within the warehouse and conduct regular cycle counts and do annual stock takes.</p>
+                            <p>• Receiving incoming shipments, verifying quantities and quality against purchase orders, packing list, and record in stock with invoicing.</p>
+                            <p>• Prepare orders for shipment, coordinate with shipping transportation for Just in time delivery.</p>
+                            <p>• Issuing raw material and wire harnesses for mining Locomotives, Vehicle interface, hydraulics, and Power modules for assembly.</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
@@ -207,6 +213,11 @@
                             <h5 class="font-weight-bold mb-1">Industrial Engineer Graduate</h5>
                             <p class="mb-2"><strong>Adient | PPC </strong> | <small>Aug 2024 - Nov 2024</small></p>
                             <p>Joining Adient|PPC as a recent graduate Through the YES program immersed me in an environment for growth and development working with Engineers who provide support and room for potential expertise</p>
+                            <h6>Key Responsibilites</h6>
+                            <p>• Define and monitor Key Process Parameters (KPPs) and Key Performance Indicators (KPIs) to Ensure Product quality and process consistency.</p>
+                            <p>• Conduct root cause analysis for quality defects, production delays, or equipment failures to implement effective corrective and preventive actions.</p>
+                            <p>• Provide technical support and troubleshooting expertise to resolve production issues, process deviation, and equipment malfunctions.</p>
+                            <p>• Lead Process Failure Mode and Effects Analysis (PFMEA) and Process Validation Activities. Lead and support projects related to new product introduction (NPI).</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
@@ -216,7 +227,13 @@
                             <a class="border-bottom border-primary text-decoration-none" href="https://www.hesto.com/" target="_blank">Hesto Harnesses</a>
                             <h5 class="font-weight-bold mb-1">Process Engineer Graduate</h5>
                             <p class="mb-2"><strong>Hesto Harnesses </strong> | <small>Dec 2024 - Present</small></p>
-                            <p>Joining Hesto Harnesses as a Process Engineer graduate </p>
+                            <p>Joining Hesto Harnesses focusing on industrial process engineering activities to enhance production and quality.</p>
+                            <h6>Key Responsibilites</h6>
+                            <p>• Designing, Develop, and implement new manufacturing process using CAD, BOM, BEAMS for wire harnesses and cable assemblies.</p>
+                            <p>• Develop detailed process flow diagrams, work instructions, Visual aids Standard Operating Procedure (SOPs).</p>
+                            <p>• Collaborate with Product design engineering to ensure new product designs are manufacturable (DFM).</p>
+                            <p>• Collect and analyze data to identify bottlenecks and lead continuous improvement initiatives using methodologies such as lean manufacturing, Six Sigma, and Kaizen.</p>
+                            <p>• Conduct time studies, work allocation and distribution for line balancing and efficient process flow.</p>
                      </div>
                     </div>
                 </div>
@@ -277,7 +294,7 @@
                             <h6 class="font-weight-bold">58%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-secondary" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                         <div class="skill mb-4">
@@ -286,7 +303,7 @@
                             <h6 class="font-weight-bold">54%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-secondary" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
@@ -295,7 +312,7 @@
                             <h6 class="font-weight-bold">72%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
@@ -304,7 +321,7 @@
                             <h6 class="font-weight-bold">45%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
@@ -325,14 +342,14 @@
                         <i class="fa fa-mobile service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">TIME STUDY</h4>
                     </div>
-                    <p>Conduct Time Studies and eliminate waste.</p>
+                    <p>Conduct time studies, work allocation and distribution for line balancing and efficient process flow</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-save service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">CAD DRAWING</h4>
                     </div>
-                    <p>CAD Drawing and Facility layout.</p>
+                    <p>CAD Drawing for Product design and Facility layout.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -346,7 +363,7 @@
                         <i class="fa fa-laptop service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">PRODUCTION</h4>
                     </div>
-                    <p>Production Scheduling.</p>
+                    <p>Production Planning, Scheduling, and handing over for mass Production.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -383,32 +400,32 @@
             <div class="row">
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
-                        <img class="img-fluid rounded w-100" src="img/blog-2.jpg" alt="">
+                        <img class="img-fluid rounded w-100" src="https://www.shutterstock.com/image-photo/digital-technology-application-modification-icon-260nw-600921383.jpg" style="width: 568px; height: 296px;" alt="">
                         </div>
-                    <h5 class="text-blue text-uppercase">19 Sept 2024 | BMW trolley modification to VW270 MQB Pans</h5>
-                    <a class="btn btn-sm btn-outline-primary py-2 position-relative d-flex align-items-center justify-content-center" href="Doc/MS4 PANS TROLLEY-1.pdf">VIEW PROJECT</a>
+                    <h5 class="text-blue text-uppercase">19 Sept 2024 | WIP Trolley modification</h5>
+                    <a class="btn btn-sm btn-outline-primary py-2 position-relative d-flex align-items-center justify-content-center" href="Doc/MS4 PANS TROLLEY-1.pdf" target="_blank">VIEW PROJECT</a>
                 </div>
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
-                        <img class="img-fluid rounded w-100" src="img/blog-3.jpg" alt="">
+                        <img class="img-fluid rounded w-100" src="https://media.istockphoto.com/id/1484852942/photo/smart-warehouse-inventory-management-system-concept.jpg?s=612x612&w=0&k=20&c=q5hzpG2i4A7iVLT7sseXdKIsVxClkLJrUlLsZJNIGMs=" style="width: 568px; height: 304px;" alt="">
                     </div>
-                    <h5 class="font-weight-medium mb-4">11 AUG 2024 | FLOOR INVENTORY AND STOCK CONTROL</h5>
-                    <a class="btn btn-sm btn-outline-primary py-2 position-relative d-flex align-items-center justify-content-center" href="./Doc/PROJECT VIABLE REPORT.pdf">VIEW PROJECT</a>
+                    <h5 class="font-weight-medium mb-4">11 AUG 2024 | INVENTORY CONTROL</h5>
+                    <a class="btn btn-sm btn-outline-primary py-2 position-relative d-flex align-items-center justify-content-center" href=""target="_blank">VIEW PROJECT</a>
                 </div>
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
-                        <img class="img-fluid rounded w-100" src="img/blog-3.jpg" alt="">
+                        <img class="img-fluid rounded w-100" src="https://static.wixstatic.com/media/4fc015_d1a50dde441d40c1872276fccdc97545~mv2.png/v1/fill/w_568,h_304,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/4fc015_d1a50dde441d40c1872276fccdc97545~mv2.png" style="width: 568px; height: 304px;" alt="">
                     </div>
                     <h5 class="font-weight-medium mb-4">22 AUG 2024 | TIME STUDIES</h5>
-                    <a class="btn btn-sm btn-outline-primary py-2 position-relative d-flex align-items-center justify-content-center" href="https://www.youtube.com/embed/FWHuX0IR8qo?si=ljd0txtHjhQwdCuX">VIDEO</a>
+                    <a class="btn btn-sm btn-outline-primary py-2 position-relative d-flex align-items-center justify-content-center" href="https://www.youtube.com/embed/FWHuX0IR8qo?si=ljd0txtHjhQwdCuX" target="_blank">VIDEO</a>
                 </div>
 
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded w-100" src="img/blog-1.jpeg" alt="">
                     </div>
-                    <h5 class="font-weight-medium mb-4">6 Jun 2024 | Web Applications Design Industry use</h5>
-                    <a class="btn btn-sm btn-outline-primary py-2 position-relative d-flex align-items-center justify-content-center" href="https://code.visualstudio.com">VIEW PROJECT</a>
+                    <h5 class="font-weight-medium mb-4">6 Jun 2024 | WEB APPLICATIONS</h5>
+                    <a class="btn btn-sm btn-outline-primary py-2 position-relative d-flex align-items-center justify-content-center" href="">VIEW PROJECT</a>
                 </div>
             </div>
         </div>
@@ -427,8 +444,7 @@
                         <i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Web Design & Development</h4>
                     </div>
-                    <p>Visual studio is a coding and programming friendly environment for web and systems application</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://code.visualstudio.com/" target="_blank">Read More</a>
+                    <p>Proficient programming Web Applications using HTML, CSS, and JavaScript</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -436,7 +452,6 @@
                         <h4 class="font-weight-bold m-0">Problem solving</h4>
                     </div>
                     <p>Problem solving is a great ability for solving and adapting to variuos challenges</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -444,7 +459,6 @@
                         <h4 class="font-weight-bold m-0">Systems Design</h4>
                     </div>
                     <p>Simulation softwares are used to design and automate processes in an industry</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://resources.sw.siemens.com/en-US/download-tecnomatix-plant-simulation-student-software" target="_blank">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -452,7 +466,6 @@
                         <h4 class="font-weight-bold m-0">Layout Design</h4>
                     </div>
                     <p>Computer-Aided-Desing (CAD) software to design and sketch faciliyt layouts</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://www.autodesk.com/za/products/autocad/overview?term=1-YEAR&tab=subscription" target="_blank">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -460,15 +473,13 @@
                         <h4 class="font-weight-bold m-0">Research</h4>
                     </div>
                     <p>Work research is a systematic approach to understanding a nature of a problem and come up with strategic solution</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://www.google.co.za/" target="_blank">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-code service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Coding</h4>
                     </div>
-                    <p>visualstudio</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://code.visualstudio.com/" target="_blank">Read More</a>
+                    <p>Proficient coding with Visual studio using Python, C# for Windows, Linux, and MAC Applications</p>
                 </div>
             </div>
         </div>
