--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                 <a href="#Projects" class="nav-item nav-link">Projects</a>
                 <a href="#Duties" class="nav-item nav-link">Duties</a>
                 <a href="#Mastery" class="nav-item nav-link">Mastery</a>
-                <a href="#testimonial" class="nav-item nav-link">Review</a>
-                <a href="#article" class="nav-item nav-link">Articles</a>
+                <a href="#Review" class="nav-item nav-link">Review</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
             <a href="https://www.linkedin.com/in/xolisani-nyawo-944050216" target="_blank" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
@@ -82,7 +81,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-silver"></h1>
                     <div class="typed-text d-none">Industrial Engineer, Process Engineer, Software Engineer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                         <a href="Doc/MR XM%20Nyawo%20%20CV.pdf"  target="_blank" class="btn btn-outline-light mr-5">Download CV</a>
+                         <a href="Doc/MR X NYAWO CV.pdf"  target="_blank" class="btn btn-outline-light mr-5">Download CV</a>
                          <button type="button" class="btn-play" data-toggle="modal"
                                 data-src="https://youtu.be/O-t95DIq7BI?si=vHNenE_iYYShffE9" data-target="#videoModal">
                             <span></span>
@@ -94,7 +93,6 @@
         </div>
     </div>
     <!-- Header End -->
-
     <!-- About Start -->
     <div class="container-fluid py-5" id="about">
         <div class="container">
@@ -390,7 +388,7 @@
         </div>
     </div>
     <!-- Duties End -->
-        <!-- Projects Start -->
+    <!-- Projects Start -->
     <div class="container-fluid pt-5" id="Projects">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
@@ -410,7 +408,7 @@
                         <img class="img-fluid rounded w-100" src="https://media.istockphoto.com/id/1484852942/photo/smart-warehouse-inventory-management-system-concept.jpg?s=612x612&w=0&k=20&c=q5hzpG2i4A7iVLT7sseXdKIsVxClkLJrUlLsZJNIGMs=" style="width: 568px; height: 304px;" alt="">
                     </div>
                     <h5 class="font-weight-medium mb-4">11 AUG 2024 | INVENTORY CONTROL</h5>
-                    <a class="btn btn-sm btn-outline-primary py-2 position-relative d-flex align-items-center justify-content-center" href=""target="_blank">VIEW PROJECT</a>
+                    <a class="btn btn-sm btn-outline-primary py-2 position-relative d-flex align-items-center justify-content-center" href="Doc/Project"target="_blank">VIEW PROJECT</a>
                 </div>
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
@@ -425,7 +423,7 @@
                         <img class="img-fluid rounded w-100" src="img/blog-1.jpeg" alt="">
                     </div>
                     <h5 class="font-weight-medium mb-4">6 Jun 2024 | WEB APPLICATIONS</h5>
-                    <a class="btn btn-sm btn-outline-primary py-2 position-relative d-flex align-items-center justify-content-center" href="">VIEW PROJECT</a>
+                    <a class="btn btn-sm btn-outline-primary py-2 position-relative d-flex align-items-center justify-content-center" href="" target="_blank" >VIEW PROJECT</a>
                 </div>
             </div>
         </div>
@@ -497,7 +495,7 @@
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">All my years as an academic professor i have never encountered a student like Xolisani whome question everthing.</h4>
+                            <h4 class="font-weight-light mb-4">My entire academic years as professor i have never encountered a student like Xolisani who question everthing.</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-3.jpeg" style="width: 80px; height: 80px;">
                             <h5 class="font-weight-bold m-0">DR MENDON DEWA</h5>
                             <span>SENIOR LECTURE:PROFESSIONAL ENGINEER</span>
@@ -515,13 +513,6 @@
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
                             <h5 class="font-weight-bold m-0">ANDILE MJEZU</h5>
                             <span>ELECTRICAL ENGINEER</span>
-                        </div>
-                        <div class="text-center">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Smart and wierd guy. Always working on something to make you question your thinking capacity.</h4>
-                            <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;">
-                            <h5 class="font-weight-bold m-0">MTHOBISI NKOSI</h5>
-                            <span>PUBLIC ADMINISTRATOR</span>
                         </div>
                     </div>
                 </div>
